--- a/Main_page.html
+++ b/Main_page.html
@@ -25,9 +25,9 @@
 </div>
 <div class="container">
     <div class="intro__inner">
-        <h4 class="intro__title">RESERVER</h4>
-        <h4 class="intro__subtitle">Find and reserve your auditorium without any troubles!</h4>
-        <a class="btn2" href="Login.html">Login</a>
+        <h6 class="intro__title" style="font-size:7vw">RESERVER</h6>
+        <h6 class="intro__subtitle" style="font-size:4vw">Find and reserve your auditorium without any troubles!</h6>
+        <a class="btn2" style="font-size:3vw" href="Login.html">Login</a>
     </div>
 </div>
 </body>
