--- a/Profile.html
+++ b/Profile.html
@@ -27,21 +27,26 @@
     <div class="container">
         <!-- The flexible grid (content) -->
         <div class="row">
-            <div class="side">
-                <div class="intro__subtitle2">
-                    <h6>Yaroslav Rohan</h6>
+            <div class="column">
+                <div class="card">
+                    <div class="intro__subtitle2">
+                        <h6>Yaroslav Rohan</h6>
+                    </div>
+                    <img src="images/User.png" alt="">
                 </div>
-                <img src="images/User.png" alt="">
             </div>
-            <div class="main">
-                <div class="intro__subtitle2">
-                    <h6>Information:</h6>
-                    <h6>User ID: 1337</h6>
-                    <h6>Email: noname@gmail.com</h6>
-                    <h6>Phone: +380961337228</h6>
-                    <br>
-                    <a href="Edit_profile.html" class="btn">Edit profile</a>
-                    <br>
+            <div class="column">
+                <div class="card">
+                    <div class="intro__subtitle2">
+                        <h6>Information:</h6>
+                        <br>
+                        <h6>User ID: 1337</h6>
+                        <h6>Email: noname@gmail.com</h6>
+                        <h6>Phone: +380961337228</h6>
+                        <br>
+                        <a href="Edit_profile.html" class="btn">Edit profile</a>
+
+                    </div>
                 </div>
             </div>
         </div>
