--- a/Profile.html
+++ b/Profile.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="header">
-    <a href="Index.html"><img src="images/Logo.png" alt=""></a>
+    <a href="index.html"><img src="images/Logo.png" alt=""></a>
     <div class="header-right">
         <a href="Registration.html">Registration</a>
         <a href="Login.html">Login</a>
@@ -20,7 +20,7 @@
         <a href="List_of_users.html">List of users</a>
         <a href="Auditoriums.html">Auditoriums</a>
         <a href="Reservation.html">Make a reservation</a>
-        <a href="Index.html">Logout</a>
+        <a href="index.html">Logout</a>
     </div>
 </div>
 <div class="intro">
