--- a/Profile.html
+++ b/Profile.html
@@ -23,27 +23,20 @@
         <a href="index.html">Logout</a>
     </div>
 </div>
-<div class="intro">
-    <div class="container">
-        <!-- The flexible grid (content) -->
-        <div class="row">
-            <div class="side">
-                <div class="intro__subtitle2">
-                    <h6>Yaroslav Rohan</h6>
-                </div>
-                <img src="images/User.png" alt="">
-            </div>
-            <div class="main">
-                <div class="intro__subtitle2">
-                    <h6>Information:</h6>
-                    <h6>User ID: 1337</h6>
-                    <h6>Email: noname@gmail.com</h6>
-                    <h6>Phone: +380961337228</h6>
-                    <br>
-                    <a href="Edit_profile.html" class="btn">Edit profile</a>
-                </div>
-            </div>
-        </div>
+
+<div class="container">
+    <div class="container3">
+        <h1>Profile</h1>
+        <hr>
+        <h2>Yaroslav Rohan</h2>
+    <img src="images/User.png" alt="">
+        <h2>Information:</h2>
+        <h2>User ID: 1337</h2>
+        <h2>Email: noname@gmail.com</h2>
+        <h2>Phone: +380961337228</h2>
+        <br>
+        <a href="Edit_profile.html" class="btn">Edit profile</a>
+        <hr>
     </div>
 </div>
 </body>
